<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/btnCreatePoll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Create Poll"
        android:textSize="24sp"
        tools:layout_editor_absoluteX="152dp"
        tools:layout_editor_absoluteY="611dp" />
</androidx.constraintlayout.widget.ConstraintLayout>