<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@drawable/toolbar1"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/studentEmailInput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:ems="10"
        android:hint="Email"
        android:inputType="text"
        app:layout_constraintStart_toStartOf="@+id/studentPasswordInput"
        app:layout_constraintTop_toBottomOf="@+id/studentLoginTitle" />

    <EditText
        android:id="@+id/studentPasswordInput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="22dp"
        android:ems="10"
        android:hint="Password"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/studentEmailInput" />

    <TextView
        android:id="@+id/voxchoiceRegisterTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="72dp"
        android:fontFamily="@font/archivo_black"
        android:text="Vox Populi"
        android:textColor="#000000"
        android:textSize="40sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/VoxPopuliSubtitle"
        android:layout_width="262dp"
        android:layout_height="57dp"
        android:layout_marginStart="35dp"
        android:fontFamily="@font/lexend"
        android:text="Your Choice, Your Voice"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/voxchoiceRegisterTitle" />

    <TextView
        android:id="@+id/studentLoginTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:text="Student Register"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="@+id/studentEmailInput"
        app:layout_constraintTop_toBottomOf="@+id/VoxPopuliSubtitle" />

    <Button
        android:id="@+id/studentLoginButton"
        android:layout_width="181dp"
        android:layout_height="49dp"
        android:layout_marginTop="28dp"
        android:text="Register"
        android:background="@drawable/btn1"
        android:textColor="#FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/studentPasswordInput" />

    <ProgressBar
        android:id="@+id/studentProgressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/studentNewHereText" />

    <TextView
        android:id="@+id/studentNewHereText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="29dp"
        android:text="Already Registered? Login Here"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/studentLoginButton" />

</androidx.constraintlayout.widget.ConstraintLayout>