<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" >

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@drawable/toolbar1"
        app:layout_constraintTop_toTopOf="parent"
        app:title="List of Polls" />

    <TextView
        android:id="@+id/textQuestion"
        android:layout_width="match_parent"
        android:layout_height="57dp"
        android:layout_marginBottom="8dp"
        android:textSize="18sp"
        android:textStyle="bold" />

    <RadioGroup
        android:id="@+id/radioGroupOptions"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

    </RadioGroup>

    <Button
        android:id="@+id/buttonVote"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Vote"
        android:background="@drawable/btn1"
        android:textColor="#FFFFFF"
        android:layout_marginTop="16dp"/>

</LinearLayout>
